[gd_scene load_steps=2 format=2]

[ext_resource path="res://load.gd" type="Script" id=1]

[node name="load" type="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -103.0
margin_right = 84.0
margin_bottom = 103.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -99.0
margin_right = 82.0
margin_bottom = 99.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 164.0
margin_bottom = 20.0

[node name="load" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 78.0
margin_bottom = 17.0
text = "select game"

[node name="spacing" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_top = 3.0
margin_right = 134.0
margin_bottom = 17.0
text = "             "

[node name="close" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 138.0
margin_right = 158.0
margin_bottom = 20.0
text = "X"

[node name="save 1" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 164.0
margin_bottom = 44.0
text = "1"

[node name="save 2" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 164.0
margin_bottom = 68.0
text = "2"

[node name="save 3" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 164.0
margin_bottom = 92.0
text = "3"

[node name="save 4" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 164.0
margin_bottom = 116.0
text = "4"

[node name="save 5" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 164.0
margin_bottom = 140.0
text = "5"

[node name="empty slot" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -99.0
margin_right = 82.0
margin_bottom = 99.0

[node name="VBoxContainer" type="VBoxContainer" parent="empty slot"]
margin_left = 4.0
margin_top = 4.0
margin_right = 160.0
margin_bottom = 194.0

[node name="error" type="Label" parent="empty slot/VBoxContainer"]
modulate = Color( 1, 0.890196, 0, 1 )
margin_right = 156.0
margin_bottom = 14.0
text = "       error empty slot"

[node name="explanation" type="Label" parent="empty slot/VBoxContainer"]
margin_top = 18.0
margin_right = 156.0
margin_bottom = 66.0
text = "   the save you selected 
 was tagged as an empty
   slot please try again"

[node name="close warning" type="Button" parent="empty slot/VBoxContainer"]
margin_top = 70.0
margin_right = 156.0
margin_bottom = 90.0
text = "close"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="VBoxContainer/save 1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="VBoxContainer/save 2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="VBoxContainer/save 3" to="." method="_on_save_3_pressed"]
[connection signal="pressed" from="VBoxContainer/save 4" to="." method="_on_save_4_pressed"]
[connection signal="pressed" from="VBoxContainer/save 5" to="." method="_on_save_5_pressed"]
[connection signal="pressed" from="empty slot/VBoxContainer/close warning" to="." method="_on_close_warning_pressed"]
