extends PopupPanel



func _on_load_game_pressed():
	visible = true


func _on_close_pressed():
	visible = false




func _on_save_1_pressed():
	pass # Replace with function body.


func _on_save_2_pressed():
	pass # Replace with function body.


func _on_save_3_pressed():
	pass # Replace with function body.


func _on_save_4_pressed():
	pass # Replace with function body.


func _on_save_5_pressed():
	pass # Replace with function body.
